# dd_poc

./: .dockerignore  .gitattributes  .gitignore  .spacesignore  Dockerfile  README.md  app.py  build-and-run.sh  build-faiss-indices.py  build-faiss.sh  checklist_scoring_analysis.json  docker-compose.yml  langgraph_config.py  playwright.config.py  pyproject.toml  pytest-e2e.ini  pytest.ini  requirements.txt  run.sh  vector_store_config.py  verify_setup.py
.cache/: embeddings_8f23fd841560587a422c3151951d650b.joblib
.streamlit/: config.toml
app/: __init__.py  main.py
app/ai/: __init__.py  agent_core.py  agent_utils.py  citation_manager.py  document_classifier.py  processing_pipeline.py  prompts.py  react_agents.py
app/core/: __init__.py  config.py  constants.py  content_ingestion.py  document_processor.py  enhanced_entity_extractor.py  entity_resolution.py  exceptions.py  knowledge_graph.py  legal_coreference.py  logging.py  model_cache.py  parsers.py  performance.py  ranking.py  reports.py  search.py  sparse_index.py  stage_manager.py  utils.py
app/handlers/: __init__.py  ai_handler.py  document_handler.py  export_handler.py
app/services/: ai_client.py  ai_config.py  ai_service.py  response_parser.py
app/ui/: __init__.py  error_handler.py  session_manager.py  sidebar.py  ui_components.py
app/ui/tabs/: __init__.py  checklist_tab.py  company_analysis_tab.py  graph_tab.py  overview_tab.py  qa_tab.py  questions_tab.py  strategic_tab.py  tab_base.py
benchmarks/: README.md  benchmark_runner.py  create_ground_truth.py  quick_test.py  regression_detector.py
data/checklist/: bloomberg.md  original.md
data/enhanced_faiss/: default.pkl.backup  default_tracker.json
data/questions/: due diligence.md  expanded.md
data/search_indexes/: .build_state.json  .extraction_cache.json  .scan_cache.json  checklist-simple.faiss  checklist-simple.pkl  checklist_structures.json  deepshield-systems-inc.faiss  deepshield-systems-inc.pkl  deepshield-systems-inc_bm25.pkl  deepshield-systems-inc_document_type_embeddings.pkl  deepshield-systems-inc_document_types.json  questions-simple.faiss  questions-simple.pkl  questions_embeddings.json  questions_structures.json  summit-digital-solutions-inc.faiss  summit-digital-solutions-inc.pkl  summit-digital-solutions-inc_bm25.pkl  summit-digital-solutions-inc_document_type_embeddings.pkl  summit-digital-solutions-inc_document_types.json
data/search_indexes/.doc_cache/: cache.db
data/search_indexes/.embedding_cache/: cache.db
data/search_indexes/knowledge_graphs/: checklist-simple_entities.json  checklist-simple_graph_metadata.json  checklist-simple_knowledge_graph.pkl  deepshield-systems-inc_entities.json  deepshield-systems-inc_graph_metadata.json  deepshield-systems-inc_knowledge_graph.pkl  questions-simple_entities.json  questions-simple_graph_metadata.json  questions-simple_knowledge_graph.pkl  summit-digital-solutions-inc_entities.json  summit-digital-solutions-inc_graph_metadata.json  summit-digital-solutions-inc_knowledge_graph.pkl
data/strategy/: rockman - alternative.md  rockman.md  rockwell - alternative.md  rockwell.md
dd_checklist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/cross_encoder/ms-marco-MiniLM-L-6-v2/: README.md
models/sentence_transformers/all-mpnet-base-v2/: README.md
scripts/: build.py  build_indexes.py  build_knowledge_graphs.py  build_sparse_indexes.py  download_models.py  run_e2e_tests.py  start.py  streamlit_cloud_config.py  test_entity_resolution.py  test_legal_coreference.py  transformer_extractors.py  verify_test_coverage.py
src/: __init__.py  ai_integration.py  config.py  document_processing.py  services.py  ui_components.py  utils.py
src/ai/: __init__.py  agent_core.py  agent_nodes.py  llm_utilities.py  prompts.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_ai_analysis.py  test_app_startup.py  test_document_processing.py  test_performance.py
tests/integration/: test_ai_workflows.py  test_core_services.py  test_critical_workflows.py  test_export_and_ui.py  test_workflows.py
tests/unit/: test_config.py  test_enhanced_entity_extractor.py  test_entity_resolution.py  test_error_handling.py  test_handlers.py  test_legal_coreference.py  test_parsers.py  test_services.py  test_session.py  test_transformer_extraction.py
