[project]
name = "dd-poc-spaces"
version = "0.1.0"
description = "AI Due Diligence - HuggingFace Spaces Production"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies - production only
    "streamlit==1.49.1",
    "sentence-transformers==5.1.0",
    "numpy==2.3.2",
    # Document processing
    "pymupdf==1.24.14",
    # Configuration
    "python-dotenv==1.1.1",
    "pydantic-settings>=2.10.1,<3.0.0",
    # Vector store - CPU optimized for Spaces
    "faiss-cpu==1.12.0",
    # AI Enhancement - LangChain
    "langchain-anthropic==0.3.19",
    "langgraph==0.6.6",
    "langchain-core==0.3.75",
    "langchain-text-splitters==0.3.11",
    "langchain-community==0.3.29",
    "langchain-huggingface==0.3.1",
    "tqdm>=4.67.1",
    "pydantic>=2.11.7",
    "huggingface-hub>=0.20.0",
    "pypdf>=6.0.0",
    "watchdog>=6.0.0",
    # Performance optimization
    "diskcache>=5.6.0",
    "joblib>=1.4.0",
    "httpx>=0.25.0",
    "backoff>=2.2.0",
    "psutil>=5.9.0",
    "rank-bm25>=0.2.2",
    "networkx>=3.5",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "unidecode>=1.4.0",
    "ftfy>=6.3.1",
    "transformers>=4.56.0",
    "torch>=2.8.0",
    "spacy>=3.8.7",
    "blackstone>=0.1.14",
    "yake>=0.6.0",
]

# No build system needed for Spaces - dependencies only
